Second_Step/data/extract_data_vpl/45/238/compilation.txt
Tools.java:20: error: non-static method echange(int[],int,int) cannot be referenced from a static context
                    echange(tab,i,j);
                    ^
Executable.java:25: error: cannot find symbol
        sortBubble(a);
        ^
  symbol:   method sortBubble(int[])
  location: class Executable
2 errors
./Tools.java:20: error: non-static method echange(int[],int,int) cannot be referenced from a static context
                    echange(tab,i,j);
                    ^
./Executable.java:25: error: cannot find symbol
        sortBubble(a);
        ^
  symbol:   method sortBubble(int[])
  location: class Executable
2 errors
